# task_parser

./: Dockerfile  docker-compose.yml  pyproject.toml
parser_app/: admin.py  celery.py  models.py  tasks.py  urls.py  views.py
parser_app/migrations/: 0001_initial.py
task_parser/: asgi.py  settings.py  urls.py  wsgi.py
