[tool.poetry]
name = "task-parser"
version = "0.1.0"
description = ""
authors = ["andrey <kutuzkin98@mail.ru>"]
readme = "README.md"
packages = [{include = "task_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
psycopg2-binary = "^2.9.7"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
redis = "^5.0.0"
celery = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
